@@ -48,6 +48,7 @@ VERSION 2.2.2
     * Improved guessing tags from filename. Added preview to Dialog.
     * Display frames around lyrics/video applets for indicating focus.
     * Improved keyboard functions when editing lyrics from the applet.
+    * Improved automatic resizing of the lyrics applet.
 
   BUGFIXES:
     * Podcast downloads can now be properly canceled. Patch by Frank Meerkötter.
